heat marche, experiences faites, plus que le rapport !

--- a/src/loadBalancing_etudiants.yaml
+++ b/src/loadBalancing_etudiants.yaml
@@ -8,33 +8,54 @@ resources:
       type: OS::Heat::ResourceGroup
       properties:
           count: 2
-          resource_def:     
-             type: simple_server.yaml
+          resource_def:
+             type: OS::Nova::Server
              properties:
-                pool_id: {get_resource: pool}
-
+                name: server%index%
+                networks:
+                - network: inf4410-net
+                key_name: "cloud"
+                image: "INF4410-Ubuntu-trusty-mini"
+                flavor: "INF4410-mini"
+                admin_user: "testUser"
+                admin_pass: "Password"
+                user_data_format: RAW
+                user_data: |
+                      #!/bin/bash
+                      wget https://raw.githubusercontent.com/houssemmh/INF4410-TP3/master/server.py
+                      python ./server.py
+                
+                
   pool:
       type: OS::Neutron::Pool
       properties:
          protocol: HTTP
          monitors: [{get_resource: monitor}]
-         subnet_id: "inf4410-net"
+         subnet: inf4410-subnet
          lb_method: ROUND_ROBIN
          vip:
-            protocol_port: 80
+            protocol_port: 8000
 
   loadbalancer:
       type: OS::Neutron::LoadBalancer
       properties:
          pool_id: {get_resource: pool}
+         members: { get_attr: [server_nodes, refs] }
+         protocol_port: 8000
 
   monitor:
       type: OS::Neutron::HealthMonitor
       properties:
           type: HTTP
-          delay: 4
-          max_retries: 2
-          timeout: 10
+          delay: 10
+          max_retries: 1
+          timeout: 4
+          
+  lb_floating:
+     type: OS::Neutron::FloatingIPAssociation
+     properties:
+       floatingip_id: "def29f4b-de3e-4a1a-8a9a-c3073426bd32"
+       port_id: { get_attr: [pool, vip, port_id] }
 
 
 outputs:
